Fix issue with missing AppID resource that prevented running the Hen COM server out of process

--- a/AtlServer/AtlServer.vcxproj
+++ b/AtlServer/AtlServer.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <None Include="AppId.rgs" />
     <None Include="AtlCluckObserver.rgs" />
     <None Include="AtlHen.rgs" />
     <None Include="AtlHenModule.def" />
