--- a/Interfaces/interfaces.vcxproj
+++ b/Interfaces/interfaces.vcxproj
@@ -19,10 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Interfaces.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <Midl Include="IHen.idl" />
+    <Midl Include="Interfaces.idl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -33,26 +31,26 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Utility</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Utility</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Utility</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Utility</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -113,7 +111,11 @@
     <Midl>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <OutputDirectory>$(OutDir)\Include\$(ProjectName)</OutputDirectory>
+      <TypeLibraryName>$(OutDir)$(ProjectName).tlb</TypeLibraryName>
     </Midl>
+    <PostBuildEvent>
+      <Command>TlbImp.exe /nologo /machine:$(PlatformTarget) $(OutDir)\$(TargetName).tlb /out:$(OutDir)$(TargetName)Interop.dll</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -136,7 +138,11 @@
     <Midl>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <OutputDirectory>$(OutDir)\Include\$(ProjectName)</OutputDirectory>
+      <TypeLibraryName>$(OutDir)$(ProjectName).tlb</TypeLibraryName>
     </Midl>
+    <PostBuildEvent>
+      <Command>TlbImp.exe /nologo /machine:$(PlatformTarget) $(OutDir)\$(TargetName).tlb /out:$(OutDir)$(TargetName)Interop.dll</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -155,7 +161,11 @@
     <Midl>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <OutputDirectory>$(OutDir)\Include\$(ProjectName)</OutputDirectory>
+      <TypeLibraryName>$(OutDir)$(ProjectName).tlb</TypeLibraryName>
     </Midl>
+    <PostBuildEvent>
+      <Command>TlbImp.exe /nologo /machine:$(PlatformTarget) $(OutDir)\$(TargetName).tlb /out:$(OutDir)$(TargetName)Interop.dll</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -178,7 +188,11 @@
     <Midl>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <OutputDirectory>$(OutDir)\Include\$(ProjectName)</OutputDirectory>
+      <TypeLibraryName>$(OutDir)$(ProjectName).tlb</TypeLibraryName>
     </Midl>
+    <PostBuildEvent>
+      <Command>TlbImp.exe /nologo /machine:$(PlatformTarget) $(OutDir)\$(TargetName).tlb /out:$(OutDir)$(TargetName)Interop.dll</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
