--- a/Interfaces/interfaces.vcxproj.filters
+++ b/Interfaces/interfaces.vcxproj.filters
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Interfaces.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <Midl Include="IHen.idl" />
+    <Midl Include="Interfaces.idl" />
   </ItemGroup>
 </Project>
