--- a/Tests/tests.vcxproj.filters
+++ b/Tests/tests.vcxproj.filters
@@ -4,6 +4,8 @@
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="AtlHenTests.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gtest\gtest-all.cc" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gmock\gmock-all.cc" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
