Extend interop tests to show that COM objects are being called on the expected thread when we introduce worker threads to the equation

--- a/InteropTests/InteropTests.csproj
+++ b/InteropTests/InteropTests.csproj
@@ -5,6 +5,7 @@
     <IsPackable>false</IsPackable>
     <Platforms>x64</Platforms>
     <GenerateProgramFile>false</GenerateProgramFile>
+    <TargetFramework>net5.0-windows</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
