--- a/Tests/tests.vcxproj
+++ b/Tests/tests.vcxproj
@@ -183,6 +183,7 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AtlFreeServerTests.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -194,6 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Mocks\IHenMock.h" />
+    <ClInclude Include="Mocks\IPostmanMock.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
