--- a/Tests/tests.vcxproj.filters
+++ b/Tests/tests.vcxproj.filters
@@ -6,10 +6,14 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gtest\gtest-all.cc" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gmock\gmock-all.cc" />
+    <ClCompile Include="AtlFreeServerTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Mocks\IHenMock.h">
+      <Filter>Mocks</Filter>
+    </ClInclude>
+    <ClInclude Include="Mocks\IPostmanMock.h">
       <Filter>Mocks</Filter>
     </ClInclude>
   </ItemGroup>
