Add more interfaces

--- a/Interfaces/interfaces.vcxproj
+++ b/Interfaces/interfaces.vcxproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <Midl Include="IHen.idl" />
     <Midl Include="Interfaces.idl" />
+    <Midl Include="IDog.idl" />
+    <Midl Include="IPostman.idl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
