Add autolink support for ComUtility, so that clients do not have to explicitly link to the lib

--- a/ComUtility/ComUtility.vcxproj.filters
+++ b/ComUtility/ComUtility.vcxproj.filters
@@ -9,7 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="ComUtility.cpp" />
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Include">
