--- a/Tests/tests.vcxproj
+++ b/Tests/tests.vcxproj
@@ -72,6 +72,7 @@
     <Link />
     <Link>
       <SubSystem>Console</SubSystem>
+      <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
     <PreBuildEvent>
       <Command>RegisterDependencies.bat $(OutDir)</Command>
@@ -95,6 +96,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
+      <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
     <PreBuildEvent>
       <Command>RegisterDependencies.bat $(OutDir)</Command>
