Add utility function for throwing system errors

--- a/Tests/tests.vcxproj.filters
+++ b/Tests/tests.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gtest\gtest-all.cc" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gmock\gmock-all.cc" />
     <ClCompile Include="AtlFreeServerTests.cpp" />
+    <ClCompile Include="UtilityTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
