--- a/Tests/tests.vcxproj
+++ b/Tests/tests.vcxproj
@@ -110,6 +110,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="AtlHenTests.cpp" />
+    <ClCompile Include="UtilityTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Mocks\IHenMock.h" />
