Add a single threaded COM apartment class that allows creating COM objects on their own apartments

--- a/ComUtility/ComUtility.vcxproj.filters
+++ b/ComUtility/ComUtility.vcxproj.filters
@@ -6,10 +6,17 @@
     <ClInclude Include="Include\ComUtility\Utility.h">
       <Filter>Include\ComUtility</Filter>
     </ClInclude>
+    <ClInclude Include="Include\ComUtility\ComFactory.h">
+      <Filter>Include\ComUtility</Filter>
+    </ClInclude>
+    <ClInclude Include="ComApartment.h" />
+    <ClInclude Include="ThreadSafeQueue.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Utility.cpp" />
+    <ClCompile Include="ComApartment.cpp" />
+    <ClCompile Include="ComFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Include">
