--- a/Tests/tests.vcxproj
+++ b/Tests/tests.vcxproj
@@ -104,6 +104,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AtlFreeServerTests.cpp" />
+    <ClCompile Include="ComFactoryTests.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
