--- a/AtlServer/AtlServer.vcxproj.filters
+++ b/AtlServer/AtlServer.vcxproj.filters
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="AtlHen.cpp" />
-    <ClCompile Include="AtlHenModule.cpp" />
+    <ClCompile Include="AtlServer.cpp" />
     <ClCompile Include="pch.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -13,13 +13,13 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="AtlHenLib.rc" />
+    <ResourceCompile Include="AtlServer.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="AtlHenLib.idl" />
+    <Midl Include="AtlServer.idl" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="AtlHenModule.def" />
+    <None Include="AtlServer.def" />
     <None Include="AtlCluckObserver.rgs">
       <Filter>RegistryScripts</Filter>
     </None>
@@ -30,7 +30,7 @@
       <Filter>RegistryScripts</Filter>
     </None>
     <None Include="readme.md" />
-    <None Include="AtlHenLib.rgs">
+    <None Include="AtlServer.rgs">
       <Filter>RegistryScripts</Filter>
     </None>
   </ItemGroup>
