--- a/Interfaces/interfaces.vcxproj.filters
+++ b/Interfaces/interfaces.vcxproj.filters
@@ -5,6 +5,7 @@
     <Midl Include="Interfaces.idl" />
     <Midl Include="IDog.idl" />
     <Midl Include="IPostman.idl" />
+    <Midl Include="IPetShop.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="readme.md" />
