Implement the managed COM server

--- a/ManagedServer/ManagedServer.csproj
+++ b/ManagedServer/ManagedServer.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>x64</Platforms>
+    <EnableComHosting>true</EnableComHosting>
   </PropertyGroup>
 
   <ItemGroup>
