--- a/Tests/tests.vcxproj
+++ b/Tests/tests.vcxproj
@@ -103,22 +103,22 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AtlFreeServerTests.cpp" />
-    <ClCompile Include="ComFactoryTests.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="ManagedServerTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="AtlHenTests.cpp" />
+    <ClCompile Include="Tests\AtlFreeServerTests.cpp" />
+    <ClCompile Include="Tests\AtlHenTests.cpp" />
+    <ClCompile Include="Tests\ComFactoryTests.cpp" />
+    <ClCompile Include="Tests\ManagedServerTests.cpp" />
+    <ClCompile Include="Tests\UtilityTests.cpp" />
     <ClCompile Include="Tutorials\CreatingComObjectsWithCoCreateInstance.cpp" />
-    <ClCompile Include="UtilityTests.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Mocks\IHenMock.h" />
-    <ClInclude Include="Mocks\IPostmanMock.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Tests\Mocks\IHenMock.h" />
+    <ClInclude Include="Tests\Mocks\IPostmanMock.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
