Implement Com Server using python

--- a/AtlFreeServer/AtlFreeServer.vcxproj.filters
+++ b/AtlFreeServer/AtlFreeServer.vcxproj.filters
@@ -13,6 +13,12 @@
     <ClCompile Include="..\Build\Output\Include\Interfaces\dlldata.c">
       <Filter>Proxy</Filter>
     </ClCompile>
+    <ClCompile Include="..\Build\Output\Include\Interfaces\IRoyalPython_i.c">
+      <Filter>Proxy</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Build\Output\Include\Interfaces\IRoyalPython_p.c">
+      <Filter>Proxy</Filter>
+    </ClCompile>
     <ClCompile Include="..\Build\Output\Include\Interfaces\IDog_i.c">
       <Filter>Proxy</Filter>
     </ClCompile>
