Ignore generated files and update WinrtServer with custom OutDir and IntDir

--- a/WinrtServer/WinrtServer.vcxproj
+++ b/WinrtServer/WinrtServer.vcxproj
@@ -82,7 +82,14 @@
     <Import Project="PropertySheet.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(SolutionDir)Build\Output\</OutDir>
+    <IntDir>$(SolutionDir)\Build\Intermediate\$(ProjectName)\</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(SolutionDir)Build\Output\</OutDir>
+    <IntDir>$(SolutionDir)\Build\Intermediate\$(ProjectName)\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
