Modify the WinrtServer to implement a programmer

--- a/WinrtServer/WinrtServer.vcxproj
+++ b/WinrtServer/WinrtServer.vcxproj
@@ -124,21 +124,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Class.h">
-      <DependentUpon>Class.idl</DependentUpon>
+    <ClInclude Include="Programmer.h">
+      <DependentUpon>Programmer.idl</DependentUpon>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Class.cpp">
-      <DependentUpon>Class.idl</DependentUpon>
+    <ClCompile Include="Programmer.cpp">
+      <DependentUpon>Programmer.idl</DependentUpon>
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="Class.idl" />
+    <Midl Include="Programmer.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
