--- a/WinrtServer/WinrtServer.vcxproj.filters
+++ b/WinrtServer/WinrtServer.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="Class.idl" />
+    <Midl Include="Programmer.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="WinrtServer.def" />
