To native tests, add manifest to allow reg-free registration of WinrtServer. Here it is important that the WinrtServer.dll is in the same folder as the tests (or maybe a subfolder below the test executable)

--- a/TutorialsAndTests/TutorialsAndTests.vcxproj
+++ b/TutorialsAndTests/TutorialsAndTests.vcxproj
@@ -124,6 +124,9 @@
     <None Include="packages.config" />
     <None Include="RegisterDependencies.bat" />
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="TutorialsAndTests.exe.manifest" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\gmock.1.11.0\build\native\gmock.targets" Condition="Exists('..\packages\gmock.1.11.0\build\native\gmock.targets')" />
