--- a/TutorialsAndTests/TutorialsAndTests.vcxproj.filters
+++ b/TutorialsAndTests/TutorialsAndTests.vcxproj.filters
@@ -48,4 +48,7 @@
       <UniqueIdentifier>{aa881f9a-deb1-4d3c-a12d-c13286583ff9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="TutorialsAndTests.exe.manifest" />
+  </ItemGroup>
 </Project>
