--- a/TutorialsAndTests/TutorialsAndTests.vcxproj.filters
+++ b/TutorialsAndTests/TutorialsAndTests.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="Tests\UtilityTests.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\WinrtServerTests.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
