Fix continuous incremental rebuild for WinrtServer by adding 'Configuration' as a subfolder for the IntDir. It appears like the toolchain does not fully respect the IntDir property, and uses the Debug/Release subfolders for compiling generated files

--- a/WinrtServer/WinrtServer.vcxproj
+++ b/WinrtServer/WinrtServer.vcxproj
@@ -90,11 +90,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)Build\Output\</OutDir>
-    <IntDir>$(SolutionDir)\Build\Intermediate\$(ProjectName)\</IntDir>
+    <IntDir>$(SolutionDir)\Build\Intermediate\$(ProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)Build\Output\</OutDir>
-    <IntDir>$(SolutionDir)\Build\Intermediate\$(ProjectName)\</IntDir>
+    <IntDir>$(SolutionDir)\Build\Intermediate\$(ProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
