Fix link to readme.md file from WinrtServer project

--- a/WinrtServer/WinrtServer.vcxproj.filters
+++ b/WinrtServer/WinrtServer.vcxproj.filters
@@ -11,7 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Class.cpp" />
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -24,12 +23,10 @@
     <None Include="WinrtServer.def" />
     <None Include="packages.config" />
     <None Include="CreateCppInterop.bat" />
+    <None Include="readme.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PropertySheet.props" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="WinrtServer.manifest" />
