--- a/WinrtServer/WinrtServer.vcxproj
+++ b/WinrtServer/WinrtServer.vcxproj
@@ -133,13 +133,11 @@
   <ItemGroup>
     <None Include="CreateCppInterop.bat" />
     <None Include="packages.config" />
+    <None Include="readme.md" />
     <None Include="WinrtServer.def" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PropertySheet.props" />
-    <Text Include="readme.txt">
-      <DeploymentContent>false</DeploymentContent>
-    </Text>
     <Manifest Include="WinrtServer.manifest" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
