Instead of copying generated files from WinrtServer, we can instead use a project reference.
When compiling the TutorialsAndTests.vcxproj project, it now generates the necessary files into

    Build\Intermediate\TutorialsAndTests\Generated Files\winrt

I think this approach will scale better if we have more than one winrt component in the solution.

If the WinrtServer should be consumed by other projects than the projects in this solution, I think those projects should generate their own files using cppwinrt.exe.

See also https://docs.microsoft.com/en-us/windows/uwp/winrt-components/create-a-windows-runtime-component-in-cppwinrt

--- a/TutorialsAndTests/TutorialsAndTests.vcxproj
+++ b/TutorialsAndTests/TutorialsAndTests.vcxproj
@@ -129,6 +129,11 @@
   <ItemGroup>
     <Manifest Include="TutorialsAndTests.exe.manifest" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WinrtServer\WinrtServer.vcxproj">
+      <Project>{1d97f756-aeb2-4070-b845-0e9c868b4cef}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\gmock.1.11.0\build\native\gmock.targets" Condition="Exists('..\packages\gmock.1.11.0\build\native\gmock.targets')" />
